--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
         <h1>Event Generator</h1>
     </header>
     <main>
-        <section id="event-feed">
+        <section id="event-feed" class="event-grid">
             <!-- Event cards will be dynamically inserted here -->
         </section>
     </main>
+    <section id="chatbot">
+        <div id="chat-window">
+            <!-- Chat messages will be dynamically inserted here -->
+        </div>
+        <div id="chat-input">
+            <input type="text" id="user-message" placeholder="Ask about campus events..." aria-label="Type your message">
+            <button id="send-button">Send</button>
+        </div>
+    </section>
     <script src="js/app.js"></script>
 </body>
 </html>
