--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Event Generator</h1>
+        <h1 style="font-size: 40px; background: linear-gradient(to right, #6a11cb, #2575fc); -webkit-background-clip: text; color: transparent;">Event Generator</h1>
     </header>
-    <main>
+    <main style="max-width: 1200px; margin: auto;">
         <section id="event-feed" class="event-grid">
             <!-- Event cards will be dynamically inserted here -->
         </section>
     </main>
-    <section id="chatbot">
+    <section id="chatbot" style="margin-top: 2rem;">
         <div id="chat-window">
             <!-- Chat messages will be dynamically inserted here -->
         </div>
