--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event Generator</title>
+    <title>campASK – Event Generator</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -24,6 +24,13 @@
             <button id="send-button">Send</button>
         </div>
     </section>
+    <section id="poster-generation">
+        <!-- Poster generation form will be dynamically inserted here -->
+    </section>
+    <section id="social-preview">
+        <!-- Social media-style posts will be dynamically inserted here -->
+    </section>
+    <button id="chat-bubble" aria-label="Open Chat">💬</button>
     <script src="js/app.js"></script>
 </body>
 </html>
