Refactor chat message styles for consistency; update header styling in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 style="font-size: 40px; background: linear-gradient(to right, #6a11cb, #2575fc); -webkit-background-clip: text; color: transparent;">Event Generator</h1>
+        <h1 style="font-size: 40px; background: linear-gradient(to right, #6a11cb, #2575fc); -webkit-background-clip: text; background-clip: text; color: transparent;">Event Generator</h1>
     </header>
     <main style="max-width: 1200px; margin: auto;">
         <section id="event-feed" class="event-grid">
