Add flashcard-style event posters with rename and delete functionality

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <section id="social-preview">
         <!-- Social media-style posts will be dynamically inserted here -->
     </section>
+    <div id="poster-container"></div>
+    <h3 style="margin-top: 40px;">🗂️ Your Event Flashcards</h3>
+    <div id="poster-list" class="poster-grid"></div>
     <button id="chat-bubble" aria-label="Open Chat">💬</button>
     <script src="js/app.js"></script>
 </body>
